Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 5.0.3, Qt Creator 6.0.1
-
None
-
479c393009 (qt-creator/qt-creator/master) 479c393009 (qt-creator/qt-creator/qmlprojectstorage)
Description
To reproduce:
1. Create simple hello world example and run it on linux device.
2. Press red square button on Application Output pane. The following message appear:
17:18:26: User requested stop. Shutting down...
17:18:31: Timeout waiting for remote process to finish.
Though the terminal window for the running app closes fine.
Attachments
For Gerrit Dashboard: QTCREATORBUG-26848 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
390141,3 | Fix closing remote linux applications | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |