src/plugins/projectexplorer/devicesupport/sshdeviceprocess.cpp
@@ -119,16 +119,14 @@ void SshDeviceProcess::interrupt()
 
 void SshDeviceProcess::terminate()
 {
+    QTC_ASSERT(d->state == SshDeviceProcessPrivate::ProcessRunning, return);
     d->doSignal(Signal::Terminate);
-    if (runInTerminal())
-        d->consoleProcess.stop();
 }
 
 void SshDeviceProcess::kill()
 {
+    QTC_ASSERT(d->state == SshDeviceProcessPrivate::ProcessRunning, return);
     d->doSignal(Signal::Kill);
-    if (runInTerminal())
-        d->consoleProcess.stop();
 }
 
 QProcess::ProcessState SshDeviceProcess::state() const
@@ -199,6 +197,8 @@ void SshDeviceProcess::handleConnected()
                 this, &DeviceProcess::error);
         connect(&d->consoleProcess, &ConsoleProcess::processStarted,
                 this, &SshDeviceProcess::handleProcessStarted);
+        connect(&d->consoleProcess, &ConsoleProcess::processStopped,
+                this, [this] { handleProcessFinished(d->consoleProcess.errorString()); });
         connect(&d->consoleProcess, &ConsoleProcess::stubStopped,
                 this, [this] { handleProcessFinished(d->consoleProcess.errorString()); });
         d->consoleProcess.setAbortOnMetaChars(false);
@@ -256,6 +256,8 @@ void SshDeviceProcess::handleProcessFinished(const QString &error)
 {
     d->errorMessage = error;
     d->exitCode = runInTerminal() ? d->consoleProcess.exitCode() : d->process->exitCode();
+    if (d->killOperation && error.isEmpty())
+        d->errorMessage = tr("The process was ended forcefully.");
     d->setState(SshDeviceProcessPrivate::Inactive);
     emit finished();
 }
@@ -357,6 +359,8 @@ void SshDeviceProcess::SshDeviceProcessPrivate::setState(SshDeviceProcess::SshDe
     if (killOperation) {
         killOperation->disconnect(q);
         killOperation.clear();
+        if (q->runInTerminal())
+            QMetaObject::invokeMethod(&consoleProcess, &ConsoleProcess::stop, Qt::QueuedConnection);
     }
     killTimer.stop();
     consoleProcess.disconnect();
